# energotest

./: README  README.md  server.service
common/: protocol.h
server/: CMakeLists.txt  database.h  dbosession.cpp  dbosession.h  entry.cpp  entry.h  main.cpp  restresource.cpp  restresource.h  user.cpp  user.h
ui_client/: CMakeLists.txt  library.cpp  library.h  library_wrap.cpp  library_wrap.h  main.cpp  main.qml
